# shift-dev

./: download.py  pyproject.toml  requirements.txt
shift_dev/: __init__.py
